More Overflow Fix

--- a/css/common.css
+++ b/css/common.css
@@ -9,6 +9,10 @@ Color Palette
 
 */
 
+.row {
+    margin-right: 0;
+}
+
 * {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
