--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,6 @@
 }
 
 .section-title {
-    margin-right: 0;
     margin-left: 0;
 }
 
